@@ -1,3 +1,9 @@
+2011-02-01  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/47541
+	* tree-ssa-structalias.c (push_fields_onto_fieldstack): Make
+	sure to have a field at offset zero.
+
 2011-01-31  Nathan Froyd  <froydnj@codesourcery.com>
 
 	Backport from mainline:
